unit testing implemeted

--- a/Spring-boot-tutorial/src/main/resources/application.properties
+++ b/Spring-boot-tutorial/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.datasource.username=root
 spring.datasource.password=passwordd
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
+
+welcome.message = Welcome to Hello World..!
