--- a/Spring-boot-tutorial/src/main/resources/application.yml
+++ b/Spring-boot-tutorial/src/main/resources/application.yml
@@ -20,6 +20,12 @@ spring:
 welcome:
   message: Welcome to Hello World..!
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        exclude: "env,beans"
 
 ---
 
